# kaldi_cmake

./: CMakeLists.txt
